# flask-hello-world

./: .gitignore  .isort.cfg  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  requirements.txt  tox.ini  uwsgi.conf
.github/workflows/: tests.yml
flask_hello_world/: __init__.py  app.py
tests/: test_flask_hello_world.py
