[tool.poetry]
name = "flask-hello-world"
version = "1.0.0"
description = "Hello World Flask application, served with uwsgi"
readme = "README.md"
homepage = "https://github.com/imankulov/flask-hello-world"
repository = "https://github.com/imankulov/flask-hello-world"
authors = ["Roman Imankulov <roman.imankulov@gmail.com>"]
license = "MIT"
classifiers = [
    "Intended Audience :: Developers",
]
include = [
    "CHANGELOG.md"
]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.1"
uwsgi = "^2.0.18"

[tool.poetry.dev-dependencies]
pytest = "^5.3.2"
black = "^19.10b0"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
