[tool.poetry]
name = "flask-hello-world"
version = "1.0.0"
description = "Hello World Flask application, served with uwsgi"
readme = "README.md"
homepage = "https://github.com/imankulov/flask-hello-world"
repository = "https://github.com/imankulov/flask-hello-world"
authors = ["Roman Imankulov <roman.imankulov@gmail.com>"]
license = "MIT"
classifiers = [
    "Intended Audience :: Developers",
]
include = [
    "CHANGELOG.md"
]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.3.2"
uwsgi = "^2.0.19"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
black = "^20.8b1"
flake8 = "^3.9.0"

[build-system]
requires = ["poetry>=1.1.5"]
build-backend = "poetry.masonry.api"
